<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    >

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".presentation.ui.CountersFragment">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <com.google.android.material.card.MaterialCardView
                android:id="@+id/mcv_search_view"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/margin_normal_1"
                android:layout_marginVertical="@dimen/margin_small"
                app:cardCornerRadius="@dimen/search_view_radius"
                app:layout_constraintBottom_toTopOf="@+id/guideline15"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <SearchView
                    android:id="@+id/searchView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/margin_small"
                    android:layout_marginBottom="@dimen/margin_small"
                    android:iconifiedByDefault="false"
                    android:imeOptions="actionDone|flagNoExtractUi"
                    android:queryBackground="@color/transparent"
                    android:queryHint="@string/search_counters"
                    android:searchHintIcon="@drawable/ic_search"
                    android:searchIcon="@drawable/ic_search"
                    tools:visibility="visible" />

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:id="@+id/clSelected"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:padding="@dimen/margin_normal_1"
                    android:visibility="gone"
                    tools:visibility="gone">

                    <ImageView
                        android:id="@+id/ivCancel"
                        android:contentDescription="@string/desc_iv_cancel"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:src="@drawable/ic_close"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintStart_toStartOf="@+id/guideline14"
                        app:layout_constraintTop_toTopOf="parent" />

                    <TextView
                        android:id="@+id/tvSelectedItems"
                        style="@style/Theme.GrayLargeTextView"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="@dimen/margin_normal_3"
                        android:text="@string/n_selected"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintStart_toEndOf="@+id/ivCancel"
                        app:layout_constraintTop_toTopOf="parent" />

                    <androidx.constraintlayout.widget.Guideline
                        android:id="@+id/guideline14"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="vertical"
                        app:layout_constraintGuide_percent="0.04" />

                    <ImageView
                        android:id="@+id/ivDeleteCounter"
                        android:contentDescription="@string/desc_iv_delete"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="@dimen/margin_normal_1"
                        android:src="@drawable/ic_delete"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                </androidx.constraintlayout.widget.ConstraintLayout>
            </com.google.android.material.card.MaterialCardView>


            <FrameLayout
                android:id="@+id/frameLayout"
                android:layout_width="0dp"
                android:layout_height="0dp"
                app:layout_constraintBottom_toTopOf="@+id/btnAddCounter"
                app:layout_constraintEnd_toStartOf="@+id/guideline3"
                app:layout_constraintHorizontal_bias="1.0"
                app:layout_constraintStart_toStartOf="@+id/guideline4"
                app:layout_constraintTop_toTopOf="@+id/guideline5"
                app:layout_constraintVertical_bias="1.0"
                android:layout_marginBottom="@dimen/margin_normal_1">

                <com.google.android.material.progressindicator.CircularProgressIndicator
                    android:id="@+id/loader"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:indeterminate="true"
                    tools:visibility="gone"
                    android:minWidth="40dp"
                    android:minHeight="40dp"
                    app:indicatorColor="@color/orange" />

                <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
                    android:id="@+id/srwCounterList"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    tools:visibility="visible"
                    android:outlineSpotShadowColor="@color/orange"
                    app:layout_constraintBottom_toTopOf="@+id/btnAddCounter"
                    app:layout_constraintEnd_toStartOf="@+id/guideline3"
                    app:layout_constraintHorizontal_bias="0.0"
                    app:layout_constraintStart_toStartOf="@+id/guideline4"
                    app:layout_constraintTop_toTopOf="@+id/guideline5"
                    tools:targetApi="p">

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/recyclerView"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    tools:listitem="@layout/item_counter" />
                </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>

                <com.cornershop.counterstest.presentation.ui.customviews.ErrorMessagesView
                    android:id="@+id/errMessage"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    tools:visibility="gone"
                    android:layout_gravity="center_vertical"/>
            </FrameLayout>

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/guideline3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintGuide_percent="0.96107054" />

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/guideline4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintGuide_percent="0.05109489" />


            <com.cornershop.counterstest.presentation.ui.customviews.ItemTimesView
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:id="@+id/viewTimesItems"
                android:visibility="gone"
                app:layout_constraintBottom_toTopOf="@+id/guideline5"
                app:layout_constraintEnd_toStartOf="@+id/guideline3"
                app:layout_constraintStart_toStartOf="@+id/guideline13"
                app:layout_constraintTop_toTopOf="@+id/guideline15" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btnAddCounter"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="4dp"
                android:padding="@dimen/margin_normal_1"
                android:text="@string/add_counters"
                android:textColor="@color/white"
                app:cornerRadius="@dimen/margin_normal_3"
                app:icon="@drawable/ic_plus"
                app:iconTint="@color/white"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.497"
                app:layout_constraintStart_toStartOf="parent" />

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/guideline5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                app:layout_constraintGuide_percent="0.2" />

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/guideline13"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintGuide_percent="0.13381995" />

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/guideline15"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                app:layout_constraintGuide_percent="0.13508442" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>
</layout>