<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginBottom="@dimen/margin_small"
    android:id="@+id/clItemCounter"
    android:padding="@dimen/margin_normal_1">


    <TextView
        android:id="@+id/tvCounterName"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/counter_name_hint"
        style="@style/TextAppearance.AppCompat.Large"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/guideline6"
        app:layout_constraintStart_toStartOf="@+id/guideline2"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.05109489" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.7" />

    <ImageView
        android:id="@+id/ivDec"
        android:contentDescription="@string/desc_iv_dec"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toEndOf="@+id/tvCounterName"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_minus" />

    <ImageView
        android:id="@+id/ivInc"
        android:contentDescription="@string/desc_iv_inc"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin_small"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toEndOf="@+id/tvCount"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_plus" />

    <androidx.constraintlayout.widget.Group
        android:id="@+id/gpCounterHandler"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:visibility="visible"
        app:constraint_referenced_ids="ivInc,ivDec,tvCount"/>

    <TextView
        android:id="@+id/tvCount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/count"
        android:layout_marginStart="@dimen/margin_small"
        style="@style/Theme.BoldTextView"
        android:padding="@dimen/margin_small"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toEndOf="@+id/ivDec"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/ivCheck"
        android:contentDescription="@string/desc_iv_check"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.841"
        app:layout_constraintStart_toStartOf="@+id/guideline6"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.529"
        app:srcCompat="@drawable/ic_check" />

</androidx.constraintlayout.widget.ConstraintLayout>