...
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:text="@string/no_counters" />

        <TextView
            android:id="@+id/tvMessage"
            style="@style/TextAppearance.AppCompat.Medium"
            android:layout_width="0dp"
            android:visibility="gone"
            tools:visibility="visible"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
...
